<resources>
    <string name="app_name">Visual Perception Lab</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="settings">Settings</string>
    <string name="Settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="password">Password</string>
    <string name="visual_perception_lab">Visual Perception Lab</string>
    <string name="title_activity_create_subject">Create New Subject</string>
    <string name="loading">Loading...</string>
    <string name="title_activity_find_subject">Find Subject</string>
    <string name="details">You can register a new subject to your data base by clicking on the \'CREATE NEW\' button or you can choose a registered subject by clicking the \'FIND SUBJECT\' button</string>
    <string name="create_new">Create new</string>
    <string name="find_subject">Find subject</string>
    <string name="subject_settings">Subject Settings</string>
    <string name="birthday">Birthday :</string>
    <string name="find_registred_subject">Find Registered Subject</string>
    <string name="first_name">First Name :</string>
    <string name="gender">Gender :</string>
    <string name="id_number">Id Number :</string>
    <string name="last_name">Last Name :</string>
    <string name="create_new_subject">Create New Subject</string>
    <string name="create_subject">create subject</string>
    <string name="pick_date">pick date</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="letters_only">Letters only!</string>
    <string name="registration">Registration :</string>
    <string name="numbers_only">Numbers only!</string>
</resources>
